Changes by ngdeleito (see git history for the full details)

2012-09-01 onwards
- changed version number to 4.4
- unpacked and removed easygestures.jar file
- reindented source code in several files
- rewrote deprecated versions of setTimeout() function calls
- made several changes in the preferences dialog, among which:
-- removed support for multiple skins
-- removed popup menu to change language
-- split the "Behavior" pane in two
-- made use of XUL's preferences system
- fixed some warnings
- removed popup for nextTab, prevTab and undoCloseTab actions
- removed input box for entering URLs
- removed linear menu
- removed Translate/Explain action
- changed behaviour of Search Web action, which now uses Firefox's search engines
- changed behaviour of Highlight/Clear action so that it now toggles Firefox's find bar
- renamed highlight action to toggleFindBar
- changed behaviour of Daily Readings action:
-- it does no longer provide default bookmarks upon creation of the daily readings folder
-- it now opens all bookmarks in new tabs
- removed red tag for links
- made select boxes for actions non editable
- removed runProgramFile actions
- removed custom about dialog