@@ -19,6 +19,7 @@ the Initial Developer. All Rights Reserved.
 
 Contributor(s):
   Ons Besbes.
+  ngdeleito
   
 Alternatively, the contents of this file may be used under the terms of
 either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -280,6 +281,10 @@ var eGf = {
         win.close();
       }
     }
+  },
+  
+  restart : function() {
+    Application.restart();
   },
 
   closeBrowser : function() {
