@@ -711,7 +711,7 @@
       "&func.sendLink;", "&func.copyImageLocation;", "&func.saveLinkAs;",
       "&func.saveImageAs;", "&func.savePageAs;", "&func.hideImages;",
       "&func.copyImage;", "&func.homepage;", "&func.dailyReadings;",
-      "&func.searchWeb;", "&func.empty;", "&func.empty;", "&func.empty;",
+      "&func.searchWeb;", "&func.restart;", "&func.empty;", "&func.empty;",
       "&func.empty;", "&func.empty;", "&func.empty;", "&func.empty;",
       "&func.empty;", "&func.empty;", "&func.empty;", "&func.empty;",
       "&func.loadURLScript1;", "&func.loadURLScript2;", "&func.loadURLScript3;",
@@ -741,7 +741,7 @@
       "fullscreen", "openLink", "openLinkNewWindow", "copyLink", "sendLink",
       "copyImageLocation", "saveLinkAs", "saveImageAs", "savePageAs",
       "hideImages", "copyImage", "homepage", "dailyReadings", "searchWeb",
-      "empty", "empty", "empty", "empty", "empty", "empty", "empty", "empty",
+      "restart", "empty", "empty", "empty", "empty", "empty", "empty", "empty",
       "empty", "empty", "empty", "loadURLScript1", "loadURLScript2",
       "loadURLScript3", "loadURLScript4", "loadURLScript5", "loadURLScript6",
       "loadURLScript7", "loadURLScript8", "loadURLScript9", "loadURLScript10",
