@@ -64,6 +64,7 @@ copyImage=Kopírovat obrázek
 homepage=Domovská stránka
 dailyReadings=Každodenní čtení
 searchWeb=Hledat na webu
+restart=Restart Firefox
 
 markVisitedLinks=Označit navštívené odkazy
 bookmarkThisLink=Přidat k záložkám tento odkaz...
