@@ -44,6 +44,7 @@ copyImage=Grafik kopieren
 homepage=Startseite
 dailyReadings=Tägliche Lektüre
 searchWeb=Web-Suche
+restart=Restart Firefox
 markVisitedLinks=Besuchte Links markieren
 bookmarkThisLink=Lesezeichen für Link
 bookmarkPage=Lesezeichen für Seite
