@@ -64,6 +64,7 @@ copyImage=Copy Image
 homepage=Home Page
 dailyReadings=Daily Readings
 searchWeb=Search Web
+restart=Restart Firefox
 
 markVisitedLinks=Mark Visited Links
 bookmarkThisLink=Bookmark This Link...
