@@ -58,6 +58,7 @@ copyImage=Copiar imagen
 homepage=Página de inicio
 dailyReadings=Lecturas diarias
 searchWeb=Búsqueda en la web
+restart=Reinicializar Firefox
 markVisitedLinks=Marcar enlaces visitados
 bookmarkThisLink=Añadir a marcadores
 bookmarkPage=Añadir a marcadores
