@@ -64,6 +64,7 @@ copyImage=Copier Image
 homepage= Page de d\u00E9marrage
 dailyReadings=Lectures quotidiennes
 searchWeb=Rechercher Web
+restart=Relancer Firefox
 
 markVisitedLinks= Marquer liens consult\u00E9s
 bookmarkThisLink= Ajou. ce lien aux signets...
