@@ -57,6 +57,7 @@ copyImage=Kép másolása
 homepage=Kezdőlap
 dailyReadings=Napi olvasnivaló
 searchWeb=Keresés
+restart=Restart Firefox
 markVisitedLinks=Meglátogatott hivatkozások megjelölése
 bookmarkThisLink=Hivatkozás felvétele a könyvjelzők közé...
 bookmarkPage=Oldal felvétele a könyvjelzők közé...
