@@ -50,6 +50,7 @@ copyImage=Copia Immagine
 homepage=Pagina Iniziale
 dailyReadings=Letture Quotidiane
 searchWeb=Cerca nel Web
+restart=Restart Firefox
 
 markVisitedLinks=Marca i Collegamenti Visitati
 bookmarkThisLink=Aggiungi il Collegamento ai Segnalibri...
