@@ -64,6 +64,7 @@ copyImage=画像をコピー
 homepage= ホームページ
 dailyReadings=デイリーリーディング
 searchWeb=web を検索
+restart=Restart Firefox
 
 markVisitedLinks= 訪れたリンクに目印を付ける
 bookmarkThisLink= このリンクをブックマーク...
