@@ -57,6 +57,7 @@ copyImage=이미지 복사
 homepage=홈 페이지
 dailyReadings=매일 읽기
 searchWeb=웹 검색
+restart=Restart Firefox
 markVisitedLinks=방문한 링크로 표시
 bookmarkThisLink=이 링크를 북마크에 추가..
 bookmarkPage=페이지를 북마크에 추가
