@@ -44,6 +44,7 @@ copyImage=Kopiuj obrazek
 homepage=Strona domowa
 dailyReadings=Wiadomości dnia
 searchWeb=Znajdź w Internecie
+restart=Restart Firefox
 markVisitedLinks=Oznacz odwiedzone odnośniki
 bookmarkThisLink=Dodaj ten odnośnik do zakładek
 bookmarkPage=Dodaj stronę do zakładek
