@@ -64,6 +64,7 @@ copyImage=Copiar Imagem
 homepage= Página Inicial
 dailyReadings=Leituras Diárias
 searchWeb=Buscar na Web
+restart=Restart Firefox
 
 markVisitedLinks= Marcar Links Visitados
 bookmarkThisLink= Adicionar Este Link aos Favoritos...
