@@ -44,6 +44,7 @@ copyImage=Kopírovať obrázok
 homepage=Domovská stránka
 dailyReadings=Každodenné čítanie
 searchWeb=Hľadať na webe
+restart=Restart Firefox
 markVisitedLinks=Označiť navštívené odkazy
 bookmarkThisLink=Pridať k záložkám tento odkaz...
 bookmarkPage=Pridať k záložkám...
