@@ -64,6 +64,7 @@ copyImage=Görüntüyü Kopyala
 homepage=Ana Sayfa
 dailyReadings=Günlük Okumalar
 searchWeb=Web'de Ara
+restart=Restart Firefox
 
 markVisitedLinks=Ziyaret Edilen Bağlantıları İşaretle
 bookmarkThisLink=Bu Bağlantıyı Yer İmlerine Ekle...
