@@ -64,6 +64,7 @@ copyImage=复制图片
 homepage=首页
 dailyReadings=每天读
 searchWeb=搜索网络
+restart=Restart Firefox
 
 markVisitedLinks=标记已访问的链接
 bookmarkThisLink=将链接加入书签...
