@@ -64,6 +64,7 @@ copyImage=複製圖片
 homepage= 首頁
 dailyReadings=每日閱讀
 searchWeb=網路搜尋
+restart=Restart Firefox
 
 markVisitedLinks= 標記拜訪過的鏈結
 bookmarkThisLink= 將此鏈結加入書籤
